--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>in.itkaran</groupId>
     <artifactId>product_service_110524</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1-Product-Service</version>
     <name>product_service_110524</name>
     <description>product_service_110524</description>
     <properties>
