--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.application.name=product_service_110524
 logging.level.org.springframework.web: DEBUG
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://product-service-db.creyg8sqqbob.ap-south-1.rds.amazonaws.com:3306/product_service_may_24
-spring.datasource.username=product_service_may_24
+spring.datasource.url=${PRODUCT_SERVICE_DB_URL}
+# spring.datasource.url=jdbc:mysql://product-service-db.creyg8sqqbob.ap-south-1.rds.amazonaws.com:3306/product_service_may_24
+spring.datasource.username=${PRODUCT_SERVICE_DB_USER_NAME}
+#spring.datasource.username=product_service_may_24
 #spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
