--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,13 @@ spring.application.name=product_service_110524
 logging.level.org.springframework.web: DEBUG
 server.port=8081
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/product_service_may_24
-spring.datasource.username=product_service_may_24
+#spring.datasource.url=jdbc:mysql://prod-serv-db-250524.creyg8sqqbob.ap-south-1.rds.amazonaws.com:3306/product_service_may_24
+#spring.datasource.username=product_service_may_24
 #spring.datasource.password=ThePassword
+spring.datasource.url=jdbc:mysql://${PROD_SERV_DB_URL}:3306/${PROD_SERV_DB_NAME}
+spring.datasource.username=${PROD_SERV_DB_USER_NAME}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+
+# break til 8:30 AM
