Add redis cache and cron

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,8 @@ spring.datasource.username=product_service_may_24
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+# Redis Config
+#spring.data.redis.port=6739
+#spring.data.redis.host="url"
 
 # break til 8:30 AM
